Fixed Alignment

--- a/asset/calc-style.css
+++ b/asset/calc-style.css
@@ -28,16 +28,15 @@ body{
     height: 4rem;
     border-radius: 3px;
     background-color: var(--input);
-    width: calc(5rem * 3);
-    font-size: 3.3rem;
+    width: calc(5rem * 3.2);
+    font-size: 3rem;
     font-family: Kalam;
     text-align-last: right;
     border-right: none;
-    margin-right: 0;
     margin-bottom: 0.3rem;
 
 }
-#backspace{
+/* #backspace{
     height: 4rem;
     border-radius: 3px;
     background-color: var(--input);
@@ -45,7 +44,7 @@ body{
     border-left: none;
     align-items: center;
     align-content: center;
-}
+} */
 button{
     background: var(--btnClr);
     border-radius: 40px;
@@ -69,9 +68,24 @@ button{
     font-size: 1.2rem;
 }
 .footer{
-    text-align:center;
+    text-align: center;
     bottom: 0;
-    position: absolute;
+    position: sticky;
     background-color: rgb(34, 6, 6);
     color: var(--primary);
+    border-radius: 17px;
+    z-index: -1;
+}
+.foot-btn{
+    border-radius: 0;
+    background: transparent;
+    color: var(--input);
+    font-size: 3rem;
+    font-family: fantasy;
+    width: 10rem;
+    margin: auto;
+    padding: auto;
+    box-shadow: none;
+
+
 }
